@@ -525,38 +525,49 @@ case 'list':
 			'filter' => FILTER_VALIDATE_INT,
 			'pageset' => true,
 			'default' => '-1'
-			),
+		),
 		'page' => array(
 			'filter' => FILTER_VALIDATE_INT,
 			'default' => '1'
-			),
+		),
 		'rfilter' => array(
 			'filter' => FILTER_VALIDATE_IS_REGEX,
 			'pageset' => true,
 			'default' => '',
-			),
+		),
 		'graph_template_id' => array(
 			'filter' => FILTER_VALIDATE_IS_NUMERIC_LIST,
 			'pageset' => true,
 			'default' => '-1'
-			),
+		),
+		'site_id' => array(
+			'filter' => FILTER_VALIDATE_INT,
+			'pageset' => true,
+			'default' => '-1'
+		),
 		'host_id' => array(
 			'filter' => FILTER_VALIDATE_INT,
 			'pageset' => true,
 			'default' => '-1'
-			),
+		),
+		'location' => array(
+			'filter' => FILTER_CALLBACK,
+			'pageset' => true,
+			'default' => '-1',
+			'options' => array('options' => 'sanitize_search_string')
+		),
 		'graph_add' => array(
 			'filter' => FILTER_VALIDATE_IS_NUMERIC_LIST,
 			'default' => ''
-			),
+		),
 		'graph_list' => array(
 			'filter' => FILTER_VALIDATE_IS_NUMERIC_LIST,
 			'default' => ''
-			),
+		),
 		'graph_remove' => array(
 			'filter' => FILTER_VALIDATE_IS_NUMERIC_LIST,
 			'default' => ''
-			)
+		)
 	);
 
 	validate_store_request_vars($filters, 'sess_gl');
@@ -638,6 +649,17 @@ case 'list':
 			</table>
 			<table class='filterTable'>
 				<tr>
+					<?php html_site_filter(get_request_var('site_id'));?>
+					<?php
+
+					if (get_request_var('site_id') >= 0) {
+						$loc_where = 'WHERE site_id = ' . db_qstr(get_request_var('site_id'));
+					} else {
+						$loc_where = '';
+					}
+
+					html_location_filter(get_request_var('location'), 'applyFilter', $loc_where);
+					?>
 					<td>
 						<?php print __('Template');?>
 					</td>
@@ -709,10 +731,22 @@ case 'list':
 		$sql_where .= " gtg.title_cache RLIKE '" . get_request_var('rfilter') . "'";
 	}
 
+	if (!isempty_request_var('site_id') && get_request_var('site_id') > 0) {
+		$sql_where .= ($sql_where == '' ? '' : ' AND') . ' h.site_id=' . get_request_var('site_id');
+	} elseif (isempty_request_var('site_id')) {
+		$sql_where .= ($sql_where == '' ? '' : ' AND') . ' h.site_id=0';
+	}
+
 	if (!isempty_request_var('host_id') && get_request_var('host_id') > 0) {
 		$sql_where .= ($sql_where == '' ? '' : ' AND') . ' gl.host_id=' . get_request_var('host_id');
 	} elseif (isempty_request_var('host_id')) {
 		$sql_where .= ($sql_where == '' ? '' : ' AND') . ' gl.host_id=0';
+	}
+
+	if (get_request_var('location') != '' && get_request_var('location') != '-1' && get_request_var('location') != '0') {
+		$sql_where .= ($sql_where == '' ? '' : ' AND') . ' h.location = ' . db_qstr(get_request_var('location'));
+	} elseif (get_request_var('location') == '0') {
+		$sql_where .= ($sql_where == '' ? '' : ' AND') . ' h.location = ""';
 	}
 
 	if (!isempty_request_var('graph_template_id') && get_request_var('graph_template_id') != '-1' && get_request_var('graph_template_id') != '0') {
@@ -866,7 +900,9 @@ case 'list':
 
 	function applyFilter() {
 		strURL = 'graph_view.php?action=list&header=false&page=1';
+		strURL += '&site_id=' + $('#site_id').val();
 		strURL += '&host_id=' + $('#host_id').val();
+		strURL += '&location=' + $('#location').val();
 		strURL += '&rows=' + $('#rows').val();
 		strURL += '&graph_template_id=' + $('#graph_template_id').val();
 		strURL += '&rfilter=' + base64_encode($('#rfilter').val());
