@@ -2177,6 +2177,46 @@ function html_site_filter($site_id = '-1', $call_back = 'applyFilter', $sql_wher
 	<?php
 }
 
+function html_location_filter($location = '', $call_back = 'applyFilter', $sql_where = '', $noany = false, $nonone = false) {
+	$theme = get_selected_theme();
+
+	if (strpos($call_back, '()') === false) {
+		$call_back .= '()';
+	}
+
+	?>
+	<td>
+		<?php print __('Location');?>
+	</td>
+	<td>
+		<select id='location' onChange='<?php print $call_back;?>'>
+			<?php if (!$noany) {?><option value='-1'<?php if ($location == '-1') {?> selected<?php }?>><?php print __('Any');?></option><?php }?>
+			<?php if (!$nonone) {?><option value='0'<?php if ($location == '0') {?> selected<?php }?>><?php print __('None');?></option><?php }?>
+			<?php
+
+			$locations = array_rekey(
+				db_fetch_assoc("SELECT DISTINCT location
+					FROM host
+					$sql_where
+					ORDER BY location ASC"),
+				'location', 'location'
+			);
+
+			if (cacti_sizeof($locations)) {
+				foreach ($locations as $l) {
+					if ($l == '') {
+						continue;
+					}
+
+					print "<option value='" . html_escape($l) . "'"; if ($location == $l) { print ' selected'; } print '>' . html_escape($l) . '</option>';
+				}
+			}
+			?>
+		</select>
+	</td>
+	<?php
+}
+
 function html_spikekill_actions() {
 	switch(get_nfilter_request_var('action')) {
 		case 'spikemenu':
